--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 github_username: wyu-du # your GitHub user name
 gitlab_username: # your GitLab user name
 twitter_username: WanyuDu # your Twitter handle
-linkedin_username: # your LinkedIn user name
+linkedin_username: wanyu-du-8759b921a
 scholar_userid: pmjB_ZQAAAAJ # your Google Scholar ID
 orcid_id: # your ORCID ID
 medium_username: # your Medium username
