--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,9 @@ middle_name:
 last_name: Du
 email: wd5jq@virginia.edu
 description: 
-footer_text: 
+footer_text: >
+  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: wanyu du, uva ilp, academic-website # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
